--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -2,53 +2,56 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:map="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Localizacion">
-
+    xmlns:map="http://schemas.android.com/apk/res-auto"
+    tools:context=".MainActivity">
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#FFFFFF"
+        android:background="#730638"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@id/guideline_botones"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
+        <Button
+            android:id="@+id/btn_normal"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="@string/mapa_normal"
+            android:textSize="12sp" />
 
         <Button
-            android:id="@+id/boton_Guardar"
+            android:id="@+id/btn_hibrido"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="@string/btn_guardar"
-            android:textSize="12sp"
-            android:backgroundTint="@color/guardado"
-            />
+            android:text="@string/mapa_hibrido"
+            android:textSize="12sp" />
 
         <Button
-            android:id="@+id/boton_Borrar"
+            android:id="@+id/btn_satelite"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="@string/btn_borrar"
-            android:textSize="12sp"
-            android:backgroundTint="@color/borrado"/>
+            android:text="@string/mapa_satelite"
+            android:textSize="12sp" />
+
         <Button
-            android:id="@+id/boton_Regresar"
+            android:id="@+id/btn_terreno"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="@string/btn_regresar"
-            android:textSize="12sp"
-            android:backgroundTint="@color/regresar"/>
+            android:text="@string/mapa_terreno"
+            android:textSize="12sp" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <!-- Agregar el widget switcher -->
-    <!--<com.google.android.material.switchmaterial.SwitchMaterial
+    <com.google.android.material.switchmaterial.SwitchMaterial
         android:id="@+id/switch_trafico"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -59,7 +62,7 @@
         app:layout_constraintBottom_toTopOf="@id/guideline_switcher"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/guideline_botones"/>-->
+        app:layout_constraintTop_toBottomOf="@id/guideline_botones"/>
 
     <fragment
         android:id="@+id/map"
@@ -67,7 +70,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/guideline_botones"
+        app:layout_constraintTop_toBottomOf="@+id/guideline_switcher"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         map:cameraTilt="30"
@@ -82,11 +85,12 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.05" />
 
-    <!--<androidx.constraintlayout.widget.Guideline
+    <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_switcher"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.10" />-->
+        app:layout_constraintGuide_percent="0.10" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
