--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="guardado">#2F921D</color>
+    <color name="borrado">#F44336</color>
+    <color name="regresar">#00BCD4</color>
 </resources>
