--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -8,8 +8,7 @@
     tools:context=".MainActivity">
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="#730638"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@id/guideline_botones"
         app:layout_constraintTop_toTopOf="parent"
@@ -22,6 +21,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="@string/mapa_normal"
+            android:backgroundTint="@color/regresar"
             android:textSize="12sp" />
 
         <Button
@@ -30,6 +30,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="@string/mapa_hibrido"
+            android:backgroundTint="@color/regresar"
             android:textSize="12sp" />
 
         <Button
@@ -38,6 +39,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="@string/mapa_satelite"
+            android:backgroundTint="@color/regresar"
             android:textSize="12sp" />
 
         <Button
@@ -46,6 +48,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="@string/mapa_terreno"
+            android:backgroundTint="@color/regresar"
             android:textSize="12sp" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
@@ -62,15 +65,26 @@
         app:layout_constraintBottom_toTopOf="@id/guideline_switcher"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/guideline_botones"/>
+        app:layout_constraintTop_toBottomOf="@id/guideline_botones"
+        android:visibility="gone"/>
+    <TextView
+        android:id="@+id/instrucciones"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/guideline_switcher"
+        android:textSize="12sp"
+        android:text="Haz clic en cualquier posición para ver sus coordenadas"
+        app:layout_constraintBottom_toTopOf="@id/map"
+        android:padding="16dp"
 
+        />
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/guideline_switcher"
+        app:layout_constraintTop_toBottomOf="@+id/instrucciones"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         map:cameraTilt="30"
@@ -90,7 +104,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.10" />
+        app:layout_constraintGuide_percent="0.10"
+        android:visibility="gone"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
